# Django-react-todo

./: .env.example  pyproject.toml  readme.md  utils.py
assessment/: settings.py  urls.py
authentications/: serializers.py  urls.py  views.py
tasks/: models.py  serializers.py  urls.py  views.py
tasks/migrations/: 0001_initial.py
todo_front/: package.json
todo_front/public/: index.html
todo_front/src/: App.css  App.js  Wrapper.js  index.js
todo_front/src/components/: Alert.js  Header.js  Main_Component.js  signIn.js  signup.js
todo_front/src/context/: todoContext.js  todoState.js
